// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logs matches snapshot 1`] = `
<Fragment>
  <div
    className="container"
  >
    <Header
      onClearClick={[Function]}
      opened={false}
      togglePanel={[Function]}
    />
    <TabContainer
      activeTabId=""
      onCloseTabClick={[Function]}
      onTabClick={[Function]}
      tabs={
        Array [
          Object {
            "nodeId": "nodeIdMock",
            "nodeName": "nodeNameMock",
            "runtimeId": "runtimeIdMock",
            "uniqueId": "foo",
          },
        ]
      }
    />
    <div
      className="content inactiveTab"
      key="foo"
    >
      <LogsTab
        nodeId="nodeIdMock"
        nodeName="nodeNameMock"
        runtimeId="runtimeIdMock"
      />
    </div>
  </div>
  <div
    className="shield"
    onClick={[Function]}
  />
</Fragment>
`;

exports[`Logs should be empty when there is no node 1`] = `
<Fragment>
  <div
    className="container hidden"
  >
    <Header
      onClearClick={[Function]}
      opened={false}
      togglePanel={[Function]}
    />
    <TabContainer
      activeTabId=""
      onCloseTabClick={[Function]}
      onTabClick={[Function]}
      tabs={Array []}
    />
  </div>
  <div
    className="shield"
    onClick={[Function]}
  />
</Fragment>
`;
